--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "gulp-autoprefixer": "^3.1.1",
     "gulp-babel": "^6.1.2",
     "gulp-cssnano": "^2.1.2",
+    "gulp-nodemon": "^2.2.1",
     "gulp-sass": "^2.3.2",
     "gulp-sourcemaps": "^1.6.0",
     "gulp-uglify": "^2.0.0",
     "gulp-uncss": "^1.0.6"
+  },
+  "dependencies": {
+    "express": "^4.14.0"
   }
 }
